--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,35 @@
   <body>
 
     <div class="navbar navbar-default navbar-static-top p-0">
-      <div class="container">
+      <div class="container site-nav">
+        <div class="log">
+
+
+          <% if current_user %>
+
+            <%= link_to "Log Out", destroy_user_session_path, class: "fa fa-sign-out",method: :delete %>
+
+            
+
+          <% else %>
+
+            <%= link_to "Log in","/users/sign_in", class: "fa fa-sign-in" %>
+
+            <%= link_to "Register","/users/sign_up", class: "fa fa-edit" %>
+
+          <% end %>
+
+
+        </div>
         <%= yield %>
+      </div>
+    </div>
+
+    <footer>
+      <p>&copy; Company 2018</p>
+    </footer>
+
+  </div> <!-- /container -->
       <!--
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
           <span class="icon-bar"></span>
@@ -56,13 +83,6 @@
             </ul>
           </div>--><!--/.well -->
 
-        </div>
-      </div>
 
-      <footer>
-        <p>&copy; Company 2018</p>
-      </footer>
-
-    </div> <!-- /container -->
   </body>
 </html>
